force-app/main/default/objects/Championship__c/Championship__c.object-meta.xml
<CustomObject>
    <description>Championship information</description>
    <label>Championship</label>
    <nameField>
        <label>Championship  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Championships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>