force-app/main/default/objects/Championship__c/fields/Championship_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Championship_Capacity__c</fullName>
    <label>Championship Capacity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>