force-app/main/default/objects/Championship__c/fields/Championship_Class__c.field-meta.xml
<CustomField>
    <fullName>Championship_Class__c</fullName>
    <description>Set Championship Class</description>
    <inlineHelpText>Set Championship Class</inlineHelpText>
    <label>Championship Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Elite</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>