force-app/main/default/objects/Championship__c/fields/Championship_Date__c.field-meta.xml
<CustomField>
    <fullName>Championship_Date__c</fullName>
    <description>Set Championship Date and time</description>
    <inlineHelpText>Set Championship Date and time</inlineHelpText>
    <label>Championship Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>