force-app/main/default/objects/Championship__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <description>Write the location of the championship</description>
    <inlineHelpText>Write the location of the championship</inlineHelpText>
    <label>Track</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>